# mygamesavechange

./: .clangd  .gitignore  CMakeLists.txt  savegamechange.cpp  trimbitspan.cpp
